tests/neg-custom-args/captures/boxmap.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/boxmap.scala:12:2 ----------------------------------------
12 |  () => b[Box[B]]((x: A) => box(f(x)))  // error
   |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |  Found:    {f} () -> ? Box[box ? B]
   |  Required: () -> Box[B]
   |
   | longer explanation available when compiling with `-explain`
